sf-hrms/force-app/main/default/objects/Onboarding_Template_Task__c/Onboarding_Template_Task__c.object-meta.xml
<CustomObject>
    <label>Onboarding Template Task</label>
    <nameField>
        <label>Task No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>