sf-hrms/force-app/main/default/objects/Onboarding_Template_Task__c/fields/Assignee_Role__c.field-meta.xml
<CustomField><fullName>Assignee_Role__c</fullName><label>Assignee Role</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>HR</fullName><default>true</default></value><value><fullName>IT</fullName><default>false</default></value><value><fullName>Manager</fullName><default>false</default></value><value><fullName>Self</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>