sf-hrms/force-app/main/default/objects/Onboarding_Template_Task__c/fields/Due_Days_After_Joining__c.field-meta.xml
<CustomField><fullName>Due_Days_After_Joining__c</fullName><label>Due Days After Joining</label><type>Number</type><precision>3</precision><scale>0</scale></CustomField>