sf-hrms/force-app/main/default/objects/Onboarding_Template_Task__c/fields/Onboarding_Template__c.field-meta.xml
<CustomField><fullName>Onboarding_Template__c</fullName><label>Onboarding Template</label><type>MasterDetail</type><referenceTo>Onboarding_Template__c</referenceTo><relationshipLabel>Template Tasks</relationshipLabel><relationshipName>Template_Tasks</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>