sf-hrms/force-app/main/default/objects/Onboarding_Template_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField><fullName>Task_Name__c</fullName><label>Task Name</label><type>Text</type><length>255</length></CustomField>